test/integration/bad/new/bad_sized_type_in_fn.stan
functions{
  void foo(array[3] real x){
    print(x);
  }
}
